# OperationsResearchQuadrotor

./: Constraints-Testing.py  Controller-Customize.py  Controller.py  README.md  pyproject.toml  test.py  test2.py
ControllerMatrices/: K.mat  Kc.mat  quadrotor_parameters.py
